fix overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,7 +53,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #282828;
   height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 code {
